--- a/index.html
+++ b/index.html
@@ -1,18 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>For' Par'</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-  <div class="navbar">
-    <div class="logo">
-      <img src="blob:chrome-untrusted://media-app/a7dac2bb-6e28-4bd3-951a-1ea7a40e4dcb" width="125px">
-    </div>
-  </div>
-  
-  
-  
-</body>
+<html>
+  <head>
+   <meta charset="utf-8">
+    <title>Angelo</title>
+  </head>
+  <BODY BGCOLOR="#0000FF">
+    <h1><FONT COLOR=white>Hello World</h1>
+    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS817rzFtNK_i2-P_PULYp52BQI9ldwy5NFWA&usqp=CAU"/>
+    <p>I am trying to code lets see how this goes!</p>
+    <h2>My Money Long</h2>
+    <p>I love to listen to mursic.</p>
+  </body>
 </html>
